<?xml version="1.0"?>
<package format="3">
  <name>fr3_force_control_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for FR3 variable joint impedance admittance control in MuJoCo.</description>
  <maintainer email="dev@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
